--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,15 @@
 {
     "configurations": [
+
+
+        {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
         {
             "name": "Docker: Python - General",
             "type": "docker",
